--- a/files/etc/nginx/snippets/sslconfig.conf
+++ b/files/etc/nginx/snippets/sslconfig.conf
@@ -8,7 +8,7 @@ ssl_stapling				on;
 ssl_stapling_verify			on;
 
 #resolver <IP DNS resolver>;
-ssl_dhparam					/app/etc/nginx/dhparam.pem;
+#ssl_dhparam					/app/etc/nginx/dhparam.pem;
 
 # gzip should not be used with ssl
 gzip off;
